--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,7 @@
 @import "../../node_modules/bulma/bulma.sass";
 
-@import "../formControl/form/Form_Comp.scss";
-
-@import "../formControl/form/components/scss/Text_Error.scss";
+@import "../../formControl/form/Form_Comp.scss";
+@import "../../formControl/form/components/scss/Text_Error.scss";
 
 //Color Helpers
 @import "./helpers//colorHelpers.scss";
